potato.css
* {
  font-family: Courier;
}

.container {
overflow: hidden;
text-align: center;
}

#startButton {
margin: 0 auto;
}

#game {
  height: 512px;
  width: 512px;
  display: block;
  border: 1px solid black;
  margin: 0 auto;
}

#name {
  float: left;
  font-weight: bold;
  margin-top: 16px;
  margin-left: 128px;
}

#hp {
  float: right;
  font-weight: bold;
  margin-top: 16px;
  margin-right: 128px;
}

#eventText {
  width: 496px;
  margin-top: 128px;
  text-align: center;
}

#choiceOne, #choiceTwo, #choiceThree {
  margin-top: 64px;
  margin-left: auto;
  margin-right: auto;
}

#copyright {
  position: absolute;
  right: 16px;
  bottom: 16px;
}

